<resources>
    <string name="app_name">古辛食尚</string>
    <string name="phone_str">账号</string>
    <string name="phone_num">请输入手机号码</string>
    <string name="verification_code">请输入6位验证码</string>
    <string name="login_">登录</string>
    <string name="passworld_str">请输入密码</string>
    <string name="exception_str">很抱歉,程序出现异常,即将退出</string>
    <string name="code_str">请输入6位数验证码</string>
    <string name="obtain_code">点击获取验证码</string>
    <string name="send_content">验证码将以短信形式发送到您的手机,请注意查收</string>
    <string name="sure_str">确认</string>
    <string name="next_str">下一步</string>
    <string name="yuedu">我已经阅读并同意</string>
    <string name="guxinshi">《古辛食尚网用户协议》</string>
    <string name="phone_tip">未输入手机号码</string>
    <string name="obtain_repeat">重新获取</string>
    <string name="reset_passworld">请输入您的新密码</string>
    <string name="phone_code">手机验证码登录</string>
    <string name="user_name">用户名登录</string>
    <string name="exit_again">再按一次退出</string>
    <string name="home">首页</string>
    <string name="mine">我的</string>
    <string name="share_str">分享</string>
    <string name="reserve_str">订桌</string>
    <string name="menu_str">菜单</string>
    <string name="no_wifi">您的网络不给力</string>
    <string name="search_shop">搜索商品</string>
    <string name="code_return">请先获取验证码</string>
    <string name="code_error">验证码输入错误</string>
    <string name="code_write">请您输入验证码</string>
    <string name="set_username">请设置一个用户名</string>
    <string name="set_passworld">请输入密码</string>
    <string name="phone_write">请输入手机号码</string>
    <string name="passworld_write">请输入密码</string>
    <string name="new_passworld">请输入新的密码</string>
    <string name="new_phone">请输入手机号码在重置</string>
    <string name="cancel">取消</string>
    <string name="selector_album">从相册中选择</string>
    <string name="taking_pictures">拍摄新的</string>
    <string name="share_hint">输入您想分享的内容</string>
    <string name="brith_str">出生日期</string>
    <string name="tip">提示</string>
    <string name="close">关闭</string>
    <string name="input_is_empty">输入为空,请重新输入</string>
    <string name="share">分享</string>
    <string name="no_pay">我不想买了</string>
    <string name="error_payment">信息填写错误，重新购买</string>
    <string name="stop_payment">商品停售或缺货</string>
    <string name="other_payment">其他原因</string>
    <string name="cancel_reason">取消订单的理由</string>
    <string name="number_person">请输入就餐人数</string>
    <string name="exchange">兑换</string>
    <string name="no_cash">无效现金卷</string>
    <string name="sure_cash">有效现金卷</string>
    <string name="recharge_dialog_detail">付款详情</string>
    <string name="recharge_dialog_choose">付款金额</string>
    <string name="recharge_dialog_confirm">提交付款</string>
    <string name="recharge_dialog_zhifubao">支付宝支付</string>
    <string name="recharge_dialog_wechat">微信支付</string>
    <string name="pay_way">付款方式:</string>
    <string name="NetWork_error">网络异常</string>
    <string name="choose_date">选择日期</string>
    <string name="button_cancel">取消</string>
    <string name="button_ok">确认</string>
    <string name="pay_rst_gxffcg">支付成功</string>
    <string name="pay_rst_jxczs">继续</string>
    <string name="pay_rst_hdsy">返回</string>
    <string name="pay_result_tip">微信支付结果</string>
    <string name="pay_result_callback_msg">微信支付结果</string>
    <string name="prize_tip">恭喜您中奖啦</string>
    <string name="all">全部</string>
    <string name="meat">肉禽类</string>
    <string name="seafood">海鲜类</string>
    <string name="fruits">水果类</string>
    <string name="japan">日料类</string>
    <string name="wine">酒水类</string>
    <string name="vegetables">蔬菜类</string>
    <string name="other">其他类</string>
    <string name="content_about">福建古辛食尚食品有限公司是一家集食材供应，加工，料理制作和配送为一体的食品公司。公司采用线上线下相结合的营销模式，向广大消费者直接提供各种新鲜海产品、肉品、蔬菜等食材，并结合自己的连锁饭店、排挡小吃推出特色菜品。我司在激烈的市场竞争中，坚持走自己独特的创业之路，依靠不断创新和推广应用新技术，建立健全的卫生管理体系，积累了一整套绿色饮食管理经验，并不断提高企业整体素质和应变能力，在未来的发展中，必然造就一支高管理、高素质、高效率的优质队伍。</string>
    <string name="Select">合计价格</string>
    <string name="pay_str">去下单</string>
    <string name="title_share">标题</string>
    <string name="str_year">年</string>
    <string name="str_month">月</string>
    <string name="str_date">日</string>
    <string name="str_confirm">确认</string>
    <string name="str_cancel">取消</string>
    <string name="str_default">默认</string>
    <string name="express_deliverys">快递配送(包邮)</string>
    <string name="invoice">发票</string>
    <string name="coupon">您目前没有可使用的优惠券</string>
    <string name="integral">积分</string>
    <string name="commodity_price">商品总价格</string>
    <string name="fare">运费</string>
    <string name="pay_checked_method">请选择一种支付方式</string>
    <string name="express_delivery">快递配送</string>
    <string name="unlimited_delivery_time">不限送货时间</string>
    <string name="weekday_delivery">工作日送货</string>
    <string name="holiday_delivery">双休、假日送货</string>
    <string name="title_activity_invoice">InvoiceActivity</string>
    <string name="no_invoice">无发票</string>
    <string name="selector_date">选择日期</string>
    <string name="selector_time">选择时间</string>
    <string name="selector_number">选择人数</string>
    <string name="help">帮助</string>
    <string name="string_help_text">是否有疑问?</string>
    <string name="quit">拒绝</string>
    <string name="settings">设置</string>
    <string name="chinese_food">中餐</string>
    <string name="soup">汤类</string>
    <string name="sashimi">刺身</string>
    <string name="iron_plate">铁板</string>
    <string name="wx_success">微信支付成功</string>
    <string name="wx_fail">微信支付失败</string>
    <string name="wx_cancel">用户取消微信支付</string>
    <string name="add_menu">加入点菜单</string>
    <string name="normal_version">正常版本更新</string>
    <string name="subscribe_table">请预订订桌后再结算</string>
    <string name="str_tip">提示</string>
    <string name="table_to_out">您还有预订订桌,请关闭订单后再结算</string>
    <string name="str_table">选择桌号</string>
    <string name="str_consignee">联系人</string>
    <string name="str_people_num">用餐人数</string>
    <string name="str_time">到店时间</string>
    <string name="str_happy">感谢您的惠顾,祝您用餐愉快!</string>
    <string name="str_pay_price">实付款</string>
    <string name="str_cash">现金卷</string>
    <string name="str_total_price">商品总价</string>
    <string name="str_rever">收货人</string>
    <string name="str_address">收货地址</string>
    <string name="str_address_status">当前状态</string>
    <string name="order_delete">订单已删除</string>
    <string name="order_no">订单无效</string>
    <string name="order_cancel">订单取消</string>
    <string name="wait_order">待付款</string>
    <string name="finish_order">已付款</string>
    <string name="order_fahuo">已发货</string>
    <string name="order_finish">已完成</string>
    <string name="order_please">申请退款</string>
    <string name="order_refuse">拒绝退款</string>
    <string name="order_success">退款成功</string>
    <string name="outorder_time">下单时间</string>
    <string name="add_recommen">添加步骤描述...</string>
    <string name="no_add_recommen">未添加文字步骤</string>
    <string name="no_selector_imaghe">请选择图片</string>
    <string name="uprecommend_str">上传菜谱</string>
    <string name="str_pay">立即支付</string>
    <string name="str_delete_order">删除订单</string>
    <string name="str_sure">确认</string>
    <string name="str_wei">开胃新品</string>
    <string name="no_add">暂未开发</string>
    <string name="no_prize">您暂无中奖纪录</string>
    <string name="no_exception_down_address">下载地址异常,请稍后再试</string>
    <string name="is_clean">是否清理缓存</string>
</resources>
