<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.recipe.r.ui.activity.login.RegisterActivity">

    <include
        layout="@layout/head_main"
        android:layout_width="match_parent"
        android:layout_height="@dimen/titler_heoght"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/reg_Etphone"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/shape_reg_edittext"
            android:hint="@string/phone_num"
            android:inputType="phone"
            android:maxLength="16"
            android:padding="10dp"
            android:textColor="@color/text_color"
            android:textColorHint="@color/text_color"
            android:textCursorDrawable="@drawable/shap_textcursorcolor"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/reg_Etcode"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:background="@drawable/shape_reg_edittext"
                android:hint="@string/code_str"
                android:inputType="number"
                android:maxLength="6"
                android:padding="10dp"
                android:textColor="@color/text_color"
                android:textColorHint="@color/text_color"
                android:textCursorDrawable="@drawable/shap_textcursorcolor"
                android:textSize="14sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Button
                android:id="@+id/reg_btnCode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                android:background="@drawable/shap_code_style"
                android:padding="5dp"
                android:text="@string/obtain_code"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/send_content"
            android:textColor="@color/text_gray"
            android:textSize="14sp" />

        <Button
            android:id="@+id/next_register"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:background="@drawable/selector_login"
            android:text="@string/next_str"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/agree_deal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/yuedu"
                android:textColor="@color/text_gray"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_deal_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/guxinshi"
                android:textColor="@color/text_bule"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
