<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/touming50"
    android:gravity="center_horizontal">

    <LinearLayout
        android:id="@+id/id_pop_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:orientation="vertical">

        <Button
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/cancel_reason"
            android:background="@color/white"
            android:textColor="@color/text_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/backgraound_main" />

            <Button
                android:id="@+id/id_btn_no"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="40dp"
                android:background="@color/white"
                android:text="@string/no_pay" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/backgraound_main" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <Button
                android:id="@+id/id_btn_error"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:background="@color/white"
                android:text="@string/error_payment" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/backgraound_main" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/id_btn_stop"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="10dp"
                android:background="@color/white"
                android:text="@string/stop_payment" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/backgraound_main" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/id_btn_other"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="10dp"
                android:background="@color/white"
                android:text="@string/other_payment" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/backgraound_main" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/id_btn_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/white"
                android:text="@string/cancel"
                android:textColor="@color/main_bule" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/backgraound_main" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>