<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_reset_passworld"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.recipe.r.ui.activity.login.ResetPassworldActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/reg_Etphone_reset"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/shape_reg_edittext"
            android:hint="@string/phone_num"
            android:inputType="phone"
            android:maxLength="16"
            android:padding="10dp"
            android:textColor="@color/text_color"
            android:textColorHint="@color/text_color"
            android:textCursorDrawable="@drawable/shap_textcursorcolor"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/reg_Etcode_reset"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:background="@drawable/shape_reg_edittext"
                android:hint="@string/code_str"
                android:inputType="number"
                android:maxLength="6"
                android:padding="10dp"
                android:textColor="@color/text_color"
                android:textColorHint="@color/text_color"
                android:textCursorDrawable="@drawable/shap_textcursorcolor"
                android:textSize="14sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Button
                android:id="@+id/reg_btnCode_reset"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                android:background="@drawable/shap_code_style"
                android:padding="5dp"
                android:text="@string/obtain_code"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/shape_login_edt_ll"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_vertical"
            android:padding="2dp">

            <EditText
                android:id="@+id/passworld_reset"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="@mipmap/img_edt_bg"
                android:gravity="center_vertical"
                android:hint="@string/reset_passworld"
                android:inputType="textPassword"
                android:maxLength="18"
                android:textColor="#000000"
                android:textColorHint="#ADBABD"
                android:textCursorDrawable="@drawable/shape_textcursorcolor"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/send_content"
            android:textColor="@color/text_gray"
            android:textSize="14sp" />

        <Button
            android:id="@+id/sure_reset"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:background="@drawable/selector_login"
            android:text="@string/sure_str"
            android:textColor="#ffffff"
            android:textSize="18sp" />


    </LinearLayout>

    <include
        layout="@layout/head_main"
        android:layout_width="match_parent"
        android:layout_height="35dp" />

</LinearLayout>
