<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_verification"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.recipe.r.ui.activity.login.VerificationActivity">

    <include
        layout="@layout/head_main"
        android:layout_width="match_parent"
        android:layout_height="@dimen/titler_heoght"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/Etphone_verification"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/shape_reg_edittext"
            android:hint="@string/phone_num"
            android:inputType="phone"
            android:maxLength="16"
            android:padding="10dp"
            android:textColor="@color/text_color"
            android:textColorHint="@color/text_color"
            android:textCursorDrawable="@drawable/shap_textcursorcolor"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/Etcode_verification"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:background="@drawable/shape_reg_edittext"
                android:hint="@string/code_str"
                android:inputType="number"
                android:maxLength="6"
                android:padding="10dp"
                android:textColor="@color/text_color"
                android:textColorHint="@color/text_color"
                android:textCursorDrawable="@drawable/shap_textcursorcolor"
                android:textSize="13sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5" />

            <Button
                android:id="@+id/btnCode_verification"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="2.5"
                android:background="@drawable/shap_code_style"
                android:text="@string/obtain_code"
                android:padding="5dp"
                android:textColor="@color/white"
                android:textSize="13sp" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="12dp">

            <TextView
                android:visibility="gone"
                android:id="@+id/reset_passworld_verification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="重置密码"
                android:textColor="@color/text_bule"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/user_login_verification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/user_name"
                android:textColor="@color/text_bule"
                android:textSize="16sp" />
        </RelativeLayout>

        <Button
            android:id="@+id/loginBtn_verification"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/selector_login"
            android:text="@string/sure_str"
            android:textColor="#ffffff"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>