<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.recipe.r.ui.activity.home.MainActivity">


    <FrameLayout
        android:id="@+id/fl_fragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <ImageView
        android:id="@+id/line_main"
        style="@style/line" />

    <LinearLayout
        android:id="@+id/main_bottom"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/home_ll"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="onClick"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/home_iv"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@mipmap/home_on" />

            <TextView
                android:id="@+id/home_tv"
                style="@style/normal_main_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/home" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/menu_ll"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="onClick"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/menu_iv"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@mipmap/menu_off" />

            <TextView
                android:id="@+id/menu_tv"
                style="@style/normal_main_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/menu_str" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/reserve_ll"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="onClick"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/reserve_iv"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@mipmap/reserve_off" />

            <TextView
                android:id="@+id/reserve_tv"
                style="@style/normal_main_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/reserve_str" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/share_ll"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="onClick"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/share_iv"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@mipmap/share_off" />

            <TextView
                android:id="@+id/share_tv"
                style="@style/normal_main_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/share_str" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/mine_ll"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="onClick"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/mine_iv"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@mipmap/mine_off" />

            <TextView
                android:id="@+id/mine_tv"
                style="@style/normal_main_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/mine" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
